test/classes/generic/badFieldExprs/bad-type-expr.param.good
bad-type-expr.chpl:20: In function 'main':
bad-type-expr.chpl:22: error: error while resolving type 'BadParam(5)'
bad-type-expr.chpl:11: note: type expression of field 'x' resolves to a 'param' value, not a type
